completed method challenges; refactored lambda challenge code